# quant-os

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  quant-os-mvp-design-spec.md
alembic/: env.py
alembic/versions/: 20260309_0001_phase1_foundation.py  20260310_0002_phase6a_backtest_catalog.py
conf/: base.yaml
conf/backtests/: baseline.yaml  stress_10bps.yaml
conf/strategies/: kr_etf_momo_20_60_v1.yaml  kr_etf_momo_30_90_v1.yaml
deploy/systemd/: quant-os.service.in
docs/: api_reference.md  end_to_end_workflow.md  frontend_data_contract.md  frontend_fastapi_api_design.md  frontend_ops_dashboard_design.md  frontend_review_gemini_2026-03-10.md  frontend_review_gemini_ko_mobile_2026-03-10.md  frontend_review_gemini_ux_2026-03-10.md  frontend_screen_spec.md  usage_guide.md
docs/plans/: 2026-03-09-hardening-before-phase5.md  2026-03-09-phase-1-foundation.md  2026-03-09-phase-2-decision-pipeline.md  2026-03-09-phase-3-execution-ledger.md  2026-03-09-phase-4-ops-safety.md  2026-03-09-phase5-must-do-hardening.md  2026-03-09-phase5-shadow-live-skeleton.md  2026-03-10-design-alignment-todo.md  2026-03-10-frontend-korean-localization.md  2026-03-10-frontend-ops-dashboard-implementation.md  2026-03-10-frontend-usability-polish.md  2026-03-10-phase-6-multi-strategy-research-backtest-expansion.md  2026-03-10-phase-6a-schema-migration-for-backtest-catalog.md  2026-03-10-phase-6b-strategy-registry.md  2026-03-10-phase-6c-backtest-request-catalog.md  (+1 more)
frontend/: index.html  package-lock.json  package.json
scripts/: install_user_service.sh
(+136 files in other folders)
